--- a/group_15_data_science.ipynb
+++ b/group_15_data_science.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMV5zeWfpaUyWFpCxnL2Lr9",
+      "authorship_tag": "ABX9TyPGdYOq7Py5/1GrdTc6mHKQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -200,25 +200,21 @@
         "Gender: binary encoding\n",
         "age: Temporarily okay but will need normalised\n",
         "city: Can be dropped\n",
-        "Working professional or Student: Can be dropped\n",
-        "Profession: One-hot-encoding\n",
-        "Academic Pressure: Combine with Work Pressure\n",
-        "Work Pressure: Combine with ^\n",
-        "CGPA: replace NaN with 0 (will need a better solution in future)\n",
-        "Study Satisfaction: Combine with Job Satisfaction\n",
-        "Job Satisfaction: Combine with ^\n",
-        "Sleep Duration: Ordinal Encoding\n",
-        "Dietary Habits: Ordinal Encoding\n",
-        "Degree: One-hot-encoding\n",
+        "Working professional or Student: Binary encoding\n",
+        "Profession: One-hot-encoding (TEMPORARILY DROPPED)\n",
+        "Academic Pressure: Temporarily okay but will need normalised\n",
+        "Work Pressure: Temporarily okay but will need normalised\n",
+        "CGPA: replace NaN with 0 - also will need normalised\n",
+        "Study Satisfaction: replace NaN with 0 - also will need normalised\n",
+        "Job Satisfaction: replace NaN with 0 - also will need normalised\n",
+        "Sleep Duration: Ordinal Encoding (TEMPORARILY DROPPED)\n",
+        "Dietary Habits: Ordinal Encoding (TEMPORARILY DROPPED)\n",
+        "Degree: One-hot-encoding (TEMPORARILY DROPPED)\n",
         "Suicidal Thoughts: Binary Encoding\n",
         "Work/Study Hours: Normalised\n",
         "Financial stress: Normalised\n",
         "Mental Illness: Binary Encoding\n",
         "Depression: Target variable (no pre-processing needed)\n",
-        "\n",
-        "IDEAS:\n",
-        "1) Feature Engineering: Combine both Academic pressure and working pressure\n",
-        "2) Feature Engineering: combine both study satisfaction job satisfaction\n",
         "\"\"\"\n",
         "# THIS WILL NEED REMOVED\n",
         "train_df = pd.read_csv('train.csv')\n",
