--- a/group_15_data_science.ipynb
+++ b/group_15_data_science.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGdYOq7Py5/1GrdTc6mHKQ",
+      "authorship_tag": "ABX9TyPHsjwpisHZ1cxs+nvrBdWz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,19 +29,20 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "\n",
         "from sklearn.model_selection import StratifiedKFold\n",
         "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.metrics import accuracy_score"
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import pandas as pd\n",
+        "import numpy as np"
       ],
       "metadata": {
         "id": "8QCVSIePgILq"
       },
-      "execution_count": 25,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -68,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -170,7 +171,7 @@
         "id": "XoXvVqRahumr",
         "outputId": "c5d55bdd-37f1-4e8a-81a4-1c7cd3e499ee"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +268,7 @@
         "id": "cbcCgqZwhwLj",
         "outputId": "190ccdf3-d13d-40ef-fd84-acc6b0c1643b"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -682,7 +683,7 @@
         "id": "sQ-OrqqibQNg",
         "outputId": "03789470-d269-44af-931e-6d0b6acf34d6"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
