--- a/group_15_data_science.ipynb
+++ b/group_15_data_science.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHsjwpisHZ1cxs+nvrBdWz",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOqX9+9QcF2OWVdm77NBW4g"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,20 +16,13 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/thomas-c-reid/Group-15-data-science/blob/main/group_15_data_science.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import StratifiedKFold\n",
+        "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
         "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.svm import SVC\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn.metrics import accuracy_score\n",
         "from sklearn.pipeline import Pipeline\n",
@@ -42,7 +34,7 @@
       "metadata": {
         "id": "8QCVSIePgILq"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,21 +54,40 @@
         "\"\"\""
       ],
       "metadata": {
-        "id": "UHEZueSIgRs6"
+        "id": "UHEZueSIgRs6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "3e999bc8-c542-49c7-ba1c-08a185b171aa"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Group 15 data science project\\nDATASET:\\n(https://www.kaggle.com/competitions/playground-series-s4e11/data)\\n\\nPROCESS:\\n1. Load and clean the data\\n2. EDA - Exploring data\\n3. Data Pre-processing\\n4. Creating model\\n5. Cross-validated training\\n6. Evaluation of model\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "eqqFvOoTgDu6",
-        "outputId": "ed9dc564-ed24-4f42-aec0-a1fb0035f6c5"
+        "outputId": "c6c8ae27-fce4-49ab-f1df-4979c5e94236"
       },
       "outputs": [
         {
@@ -169,9 +180,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XoXvVqRahumr",
-        "outputId": "c5d55bdd-37f1-4e8a-81a4-1c7cd3e499ee"
+        "outputId": "b0d80c20-9f8d-497b-ac3c-74a4582cb86a"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,11 +191,7 @@
             "Unique values in column \"Gender\" ['Female' 'Male']\n",
             "Unique values in column \"Working Professional or Student\" ['Working Professional' 'Student']\n",
             "Unique values in column \"Family History of Mental Illness\" ['No' 'Yes']\n",
-            "Unique values in column \"Have you ever had suicidal thoughts ?\" ['No' 'Yes']\n",
-            "Unique values in column \"Dietry Habits\" ['Healthy' 'Unhealthy' 'Moderate' 'Yes' 'Pratham' 'BSc' 'Gender' '3'\n",
-            " 'More Healthy' 'Less than Healthy' 'Mihir' '1.0' 'Hormonal' 'Electrician'\n",
-            " nan 'No Healthy' 'Less Healthy' 'M.Tech' 'Vegas' 'No' 'Male' 'Indoor'\n",
-            " 'Class 12' '2']\n"
+            "Unique values in column \"Have you ever had suicidal thoughts ?\" ['No' 'Yes']\n"
           ]
         }
       ]
@@ -263,12 +270,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 241
+          "height": 276
         },
         "id": "cbcCgqZwhwLj",
-        "outputId": "190ccdf3-d13d-40ef-fd84-acc6b0c1643b"
+        "outputId": "3eb24c4c-30c3-498c-c900-a000d3540fd5"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -304,7 +311,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ff293326-4060-4d2e-b62b-d45c2f05db31\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b2e2702e-5145-4a88-b7f6-491613ae70dd\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -419,7 +426,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ff293326-4060-4d2e-b62b-d45c2f05db31')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b2e2702e-5145-4a88-b7f6-491613ae70dd')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -471,12 +478,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ff293326-4060-4d2e-b62b-d45c2f05db31 button.colab-df-convert');\n",
+              "        document.querySelector('#df-b2e2702e-5145-4a88-b7f6-491613ae70dd button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ff293326-4060-4d2e-b62b-d45c2f05db31');\n",
+              "        const element = document.querySelector('#df-b2e2702e-5145-4a88-b7f6-491613ae70dd');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -496,8 +503,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-2e2a6e73-d6dc-4c09-a81f-625ea6c7aa97\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2e2a6e73-d6dc-4c09-a81f-625ea6c7aa97')\"\n",
+              "<div id=\"df-cb5b9e02-dc44-436f-9b09-257a178ae60c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cb5b9e02-dc44-436f-9b09-257a178ae60c')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -616,7 +623,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-2e2a6e73-d6dc-4c09-a81f-625ea6c7aa97 button');\n",
+              "        document.querySelector('#df-cb5b9e02-dc44-436f-9b09-257a178ae60c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -632,7 +639,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 7
         }
       ]
     },
@@ -643,59 +650,79 @@
         "4. Creating Model / Training / Evaluating\n",
         "\"\"\"\n",
         "\n",
-        "# Define model\n",
-        "model = LogisticRegression(max_iter=1000, random_state=42)\n",
+        "# Define model parameters\n",
+        "logistic_regression_params = {'max_iter': 1000, 'random_state': 42}\n",
+        "decision_tree_params = {'criterion': 'gini', 'max_depth': 3, 'random_state': 42}\n",
+        "random_forest_params = {'n_estimators': 100, 'max_depth': 5, 'random_state': 42}\n",
+        "svm_params = {'kernel': 'linear', 'C': 1.0}\n",
+        "knn_params = {'n_neighbors': 5}\n",
         "\n",
-        "# Define stratified k-fold cross-validation\n",
-        "n_splits = 5\n",
-        "skf = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=42)\n",
         "\n",
-        "# For tracking scores\n",
-        "fold = 1\n",
-        "accuracies = []\n",
+        "# Define models\n",
+        "models = []\n",
+        "models.append({'Logistic_regression': LogisticRegression(**logistic_regression_params)})\n",
+        "models.append({'decision_tree': DecisionTreeClassifier(**decision_tree_params)})\n",
+        "models.append({'Random Forest': RandomForestClassifier(**random_forest_params)}),\n",
+        "models.append({'SVM': SVC(**svm_params)}),\n",
+        "models.append({'K-Nearest Neighbors': KNeighborsClassifier(**knn_params)})\n",
+        "# models.append({'name': Classificier})\n",
         "\n",
-        "# Cross-validation loop\n",
-        "for train_index, val_index in skf.split(train_df, target):\n",
-        "    # Split data\n",
-        "    X_train, X_val = train_df.iloc[train_index], train_df.iloc[val_index]\n",
-        "    y_train, y_val = target.iloc[train_index], target.iloc[val_index]\n",
         "\n",
-        "    # Train the model\n",
-        "    model.fit(X_train, y_train)\n",
+        "model_results = []\n",
+        "for model_name, model in models.items():\n",
         "\n",
-        "    # Predict on validation set\n",
-        "    y_pred = model.predict(X_val)\n",
+        "  # Define stratified k-fold cross-validation\n",
+        "  n_splits = 5\n",
+        "  skf = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=42)\n",
         "\n",
-        "    # Evaluate accuracy\n",
-        "    acc = accuracy_score(y_val, y_pred)\n",
-        "    accuracies.append(acc)\n",
+        "  # For tracking scores\n",
+        "  fold = 1\n",
+        "  accuracies = []\n",
         "\n",
-        "    print(f\"Fold {fold} Accuracy: {acc:.4f}\")\n",
-        "    fold += 1\n",
+        "  # Cross-validation loop\n",
+        "  for train_index, val_index in skf.split(train_df, target):\n",
+        "      # Split data\n",
+        "      X_train, X_val = train_df.iloc[train_index], train_df.iloc[val_index]\n",
+        "      y_train, y_val = target.iloc[train_index], target.iloc[val_index]\n",
+        "\n",
+        "      # Train the model\n",
+        "      model.fit(X_train, y_train)\n",
+        "\n",
+        "      # Predict on validation set\n",
+        "      y_pred = model.predict(X_val)\n",
+        "\n",
+        "      # Evaluate accuracy\n",
+        "      acc = accuracy_score(y_val, y_pred)\n",
+        "      accuracies.append(acc)\n",
+        "\n",
+        "      print(f\"Fold {fold} Accuracy: {acc:.4f}\")\n",
+        "      fold += 1\n",
+        "\n",
+        "  model_results.append({model_name: np.mean(accuracies)})\n",
         "\n",
         "# Average accuracy\n",
-        "print(f\"\\nMean Accuracy across {n_splits} folds: {np.mean(accuracies):.4f}\")"
+        "# print(f\"\\nMean Accuracy across {n_splits} folds: {np.mean(accuracies):.4f}\")\n",
+        "print(model_results)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 211
         },
         "id": "sQ-OrqqibQNg",
-        "outputId": "03789470-d269-44af-931e-6d0b6acf34d6"
+        "outputId": "bf2de335-8ff8-40e3-f7fe-0035d1e09d56"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Fold 1 Accuracy: 0.9341\n",
-            "Fold 2 Accuracy: 0.9333\n",
-            "Fold 3 Accuracy: 0.9365\n",
-            "Fold 4 Accuracy: 0.9388\n",
-            "Fold 5 Accuracy: 0.9344\n",
-            "\n",
-            "Mean Accuracy across 5 folds: 0.9354\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'KNeighborsClassifier' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-8-91a71a769b97>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'Random Forest'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mrandom_forest_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'SVM'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mSVC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0msvm_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'K-Nearest Neighbors'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mKNeighborsClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mknn_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;31m# models.append({'name': Classificier})\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'KNeighborsClassifier' is not defined"
           ]
         }
       ]
