--- a/group_15_data_science.ipynb
+++ b/group_15_data_science.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 33,
       "metadata": {
         "id": "8QCVSIePgILq"
       },
@@ -26,14 +26,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
         "id": "UHEZueSIgRs6",
-        "outputId": "506131a5-39d2-49d1-98f3-72ad1a2833e6"
+        "outputId": "eca0659a-f901-47b1-d8d7-26ddd5bb1c76"
       },
       "outputs": [
         {
@@ -47,7 +47,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 34
         }
       ],
       "source": [
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 35,
       "metadata": {
         "id": "eqqFvOoTgDu6"
       },
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 36,
       "metadata": {
         "id": "XoXvVqRahumr",
         "collapsed": true
@@ -169,7 +169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 37,
       "metadata": {
         "id": "cbcCgqZwhwLj"
       },
@@ -356,7 +356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 38,
       "metadata": {
         "id": "sQ-OrqqibQNg"
       },
@@ -390,7 +390,7 @@
         "    self.models = models\n",
         "    self.n_splits = n_splits\n",
         "    self.results = {}\n",
-        "    # self.results_analyser = ResultsAnalyser()\n",
+        "    self.results_analyser = ResultsAnalyser()\n",
         "\n",
         "  def fit(self,x,y):\n",
         "    skf = StratifiedKFold(n_splits=self.n_splits, shuffle=True, random_state=42)\n",
@@ -430,7 +430,7 @@
         "    return x\n",
         "\n",
         "  def get_results(self):\n",
-        "    # self.results_analyser.view_results(self.results)\n",
+        "    self.results_analyser.view_results(self.results)\n",
         "    print(self.results)\n",
         "# results_analyser = ResultsAnalyser(model_results)\n",
         "# results_analyser.view_results()"
@@ -438,7 +438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 44,
       "metadata": {
         "id": "4Ihdisz3HiM4"
       },
@@ -449,35 +449,35 @@
         "'''\n",
         "\n",
         "class ResultsAnalyser:\n",
-        "    def __init__(self, results):\n",
-        "        self.results = results\n",
-        "        self.process_results()\n",
+        "    def __init__(self):\n",
+        "      ...\n",
         "\n",
-        "    def process_results(self):\n",
-        "        # for results_set in self.results:\n",
-        "            # ...put through function to build confusin matrix -\n",
-        "        ...\n",
+        "    def view_results(self, results):\n",
+        "        for result in results.items():\n",
+        "            print(result)\n",
         "\n",
-        "    def view_results(self):\n",
-        "        for result in self.results:\n",
-        "            print(result)"
+        "    def create_confusion_matrix(fp,fn,tp,tn):\n",
+        "      ...\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 45,
       "metadata": {
-        "id": "EI-qUZ0hHiM4",
-        "outputId": "48b24d4e-5dc8-470a-dc67-31a1e3c29d05",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EI-qUZ0hHiM4",
+        "outputId": "1985602d-6197-4e35-a93c-3ea6c7adf481"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "('Logistic_regression', {'accuracy': np.float64(0.9376830135039091), 'tp%': np.float64(0.1462046908315565), 'tn%': np.float64(0.7914783226723525), 'fp%': np.float64(0.026808813077469795), 'fn%': np.float64(0.03550817341862118)})\n",
+            "('decision_tree', {'accuracy': np.float64(0.9100995024875622), 'tp%': np.float64(0.15526652452025586), 'tn%': np.float64(0.7548329779673064), 'fp%': np.float64(0.063454157782516), 'fn%': np.float64(0.02644633972992182)})\n",
+            "('random_forest', {'accuracy': np.float64(0.9275053304904052), 'tp%': np.float64(0.13539445628997868), 'tn%': np.float64(0.7921108742004265), 'fp%': np.float64(0.02617626154939588), 'fn%': np.float64(0.04631840796019901)})\n",
             "{'Logistic_regression': {'accuracy': np.float64(0.9376830135039091), 'tp%': np.float64(0.1462046908315565), 'tn%': np.float64(0.7914783226723525), 'fp%': np.float64(0.026808813077469795), 'fn%': np.float64(0.03550817341862118)}, 'decision_tree': {'accuracy': np.float64(0.9100995024875622), 'tp%': np.float64(0.15526652452025586), 'tn%': np.float64(0.7548329779673064), 'fp%': np.float64(0.063454157782516), 'fn%': np.float64(0.02644633972992182)}, 'random_forest': {'accuracy': np.float64(0.9275053304904052), 'tp%': np.float64(0.13539445628997868), 'tn%': np.float64(0.7921108742004265), 'fp%': np.float64(0.02617626154939588), 'fn%': np.float64(0.04631840796019901)}}\n"
           ]
         }
