--- a/group_15_data_science.ipynb
+++ b/group_15_data_science.ipynb
@@ -187,6 +187,8 @@
         "      elif plot_type == 'box_plot':\n",
         "        self.plot_box_plot(columns)\n",
         "\n",
+        "      self.perform_t_test()\n",
+        "\n",
         "  def plot_columns(self):\n",
         "    print(\"*\" * 50)\n",
         "    print(\"PLOTTING EACH COLUMN\")\n",
@@ -221,6 +223,9 @@
         "      print(f\"Type: {col_type}\")\n",
         "      print(f\"Nulls: {null_count} ({null_percent:.2f}%)\")\n",
         "      print(\"-\" * 50)\n",
+        "\n",
+        "  def perform_t_test(self):\n",
+        "    ...\n",
         "\n",
         "  def plot_pie_chart(self, columns):\n",
         "    for column in columns:\n",
